--- a/views/edificio_views.xml
+++ b/views/edificio_views.xml
@@ -3,12 +3,12 @@
 
     <record model="ir.ui.view" id="nursery_plant_form">
         <field name="name">Edificio Form View</field>
-        <field name="model">Alquileres.Edificio</field>
+        <field name="model">doc_alquileres.Edificio</field>
         <field name="arch" type="xml">
             <form string="Edificio">
                 <sheet>
                     <h1>
-                        <field name="nombre" placeholder="Nombre del Edificio"/>
+                        <field name="name" placeholder="Nombre del Edificio"/>
                     </h1>
                     <notebook>
                         <page string="Shop">
@@ -16,14 +16,12 @@
                                 <field name="direccion"/>
                                 <field name="area_terreno"/>
                                 <field name="area_construida"/>
-
                                 <field name="valor_real"/>
                                 <field name="valor_fiscal"/>
                             </group>
                         </page>
-                        <page string="Orders">
-                            <field name="order_ids"/>
-                        </page>
+                       <page string="Shop2">
+                        </page> 
                     </notebook>
                 </sheet>
             </form>
