--- a/views/local_views.xml
+++ b/views/local_views.xml
@@ -3,23 +3,24 @@
 
     <record model="ir.ui.view" id="nursery_plant_form">
         <field name="name">Pisos Form View</field>
-        <field name="model">Alquileres.Local</field>
+        <field name="model">doc_alquileres.Local</field>
         <field name="arch" type="xml">
             <form string="Local">
                 <sheet>
                     <h1>
-                        <field name="numero" placeholder="Numero del Local"/>
+                        Numero del Local
                     </h1>
                     <notebook>
                         <page string="Shop">
                             <group>
-                                <field name="numero"/> 
                                 <field name="area_M2"/>
-                                <field name="numero_medidor_electrico"/>
-                                <field name="numero_medidor_agua"/>
+                                <field name="medidor_electrico"/>
+                                <field name="medidor_agua"/>
                                 <field name="piso_id"/>
                                 <field name="edificio_id"/>
                             </group>
+                        </page> 
+                        <page string="Shop2">
                         </page> 
                     </notebook>
                 </sheet>
