--- a/views/local_views.xml
+++ b/views/local_views.xml
@@ -3,9 +3,9 @@
 
     <record model="ir.ui.view" id="nursery_plant_form">
         <field name="name">Pisos Form View</field>
-        <field name="model">doc_alquileres.Local</field>
+        <field name="model">doc_alquileres.locales</field>
         <field name="arch" type="xml">
-            <form string="Local">
+            <form string="local">
                 <sheet>
                     <h1>
                         Numero del Local
